--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "apexcharts": "^4.7.0",
+     
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
+    "chart.js": "^4.4.9",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.1",
-    "vue3-apexcharts": "^1.8.0"
+    "vue-chartjs": "^5.3.2",
+    "vue-router": "^4.5.1" 
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
