--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-     
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
     "chart.js": "^4.4.9",
     "vue": "^3.5.13",
+    "ag-grid-vue3": "^32.0.0",
+    "ag-grid-community": "^32.0.0",
     "vue-chartjs": "^5.3.2",
-    "vue-router": "^4.5.1" 
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
