--- a/package.json
+++ b/package.json
@@ -9,17 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ag-grid-community": "^32.0.0",
+    "ag-grid-vue3": "^32.0.0",
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
     "chart.js": "^4.4.9",
     "vue": "^3.5.13",
-    "ag-grid-vue3": "^32.0.0",
-    "ag-grid-community": "^32.0.0",
     "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.3",
+    "concurrently": "^9.1.2",
     "sass": "^1.89.0",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2"
