--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vitejs/plugin-vue": "^5.2.3",
     "concurrently": "^9.1.2",
     "sass": "^1.89.0",
+    "sass-loader": "^16.0.5",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
