--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "install:all": "npm install && cd backend && npm install",
+    "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
+    "dev:frontend": "vite",
+    "dev:backend": "cd backend && nodemon index.js",
     "build": "vite build",
     "preview": "vite preview"
   },
@@ -24,6 +27,7 @@
     "sass": "^1.89.0",
     "sass-loader": "^16.0.5",
     "vite": "^6.2.4",
-    "vite-plugin-vue-devtools": "^7.7.2"
+    "vite-plugin-vue-devtools": "^7.7.2",
+    "nodemon": "^3.1.10"
   }
 }
